# cider

./: AGENTS.md  Cargo.toml  README.md
.agents/skills/cider-add-source/: SKILL.md
.agents/skills/cider-add-source/agents/: openai.yaml
.agents/skills/cider-output-contract/: SKILL.md
.agents/skills/cider-output-contract/agents/: openai.yaml
.agents/skills/cider-release-workflow/: SKILL.md
.agents/skills/cider-release-workflow/agents/: openai.yaml
.github/workflows/: ci.yaml  release.yaml
.skills/cider-cli/: SKILL.md
src/: main.rs  pretty.rs
src/sources/: activity_monitor.rs  apps.rs  automator.rs  bluetooth.rs  books.rs  calendar.rs  clock.rs  console_logs.rs  contacts.rs  disks.rs  facetime.rs  find_my.rs  fonts.rs  home.rs  journal.rs  keychain.rs  mail.rs  maps.rs  messages.rs  mod.rs  music.rs  news.rs  notes.rs  passwords.rs  photo_booth.rs  photos.rs  reading_list.rs  reminders.rs  safari.rs  screen_sharing.rs  screenshots.rs  shortcuts.rs  spotlight.rs  stickies.rs  stocks.rs  system_info.rs  time_machine.rs  util.rs  voice_memos.rs  weather.rs  (+1 more)
