[package]
name = "cider-cli"
version = "0.1.5"
edition = "2021"
description = "Manage macOS Apple apps from the command line — Reminders, Calendar, Contacts, Notes, Mail, Music, Keychain, Safari, and 30+ more"
license = "MIT"
repository = "https://github.com/thrashr888/cider"
homepage = "https://github.com/thrashr888/cider"
readme = "README.md"
keywords = ["macos", "apple", "cli", "automation", "keychain"]
categories = ["command-line-utilities", "os::macos-apis"]
rust-version = "1.70"

[[bin]]
name = "cider"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
